@@ -24,11 +24,11 @@ BEGIN
       VALUE "FileDescription",		"Library to support cross-platform C notification functions\0"
       VALUE "FileVersion",		"@VERSION@" "\0"
       VALUE "InternalName",		"libcnotify.dll\0"
-      VALUE "LegalCopyright",		"(c) 2008-2012 Joachim Metz <jbmetz@users.sourceforge.net>\0"
+      VALUE "LegalCopyright",		"(c) 2008-2012 Joachim Metz <joachim.metz@gmail.com>\0"
       VALUE "OriginalFilename",		"libcnotify.dll\0"
       VALUE "ProductName",		"libcnotify\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://libctype.sourceforge.net\0"
+      VALUE "Comments",			"For more information visit http://code.google.com/p/libclibs/\0"
     END
   END
   BLOCK "VarFileInfo"
