@@ -1,6 +1,6 @@
 dnl Functions for libcerror
 dnl
-dnl Version: 20120425
+dnl Version: 20120501
 
 dnl Function to detect if libcerror is available
 dnl ac_libcerror_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -37,7 +37,8 @@ AC_DEFUN([AX_LIBCERROR_CHECK_LIB],
    AC_CHECK_HEADERS([libcerror.h])
 
    AS_IF(
-    [test "x$ac_cv_header_libcerror_h" != xno],
+    [test "x$ac_cv_header_libcerror_h" = xno],
+    [ac_cv_libcerror=no],
     [dnl Check for the individual functions
     ac_cv_libcerror=yes
 
